--- a/InitialTest/InitialTest.csproj
+++ b/InitialTest/InitialTest.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="ItemCategoryCRUDTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ChantalGoodsLibrary\ChantalGoodsLibrary.csproj">
